--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Sổ kỷ luật Online</h2>
 </header>
 <body>
-    <form class="box" action="" method="POST" target="_self">
+    <form class="box" id="loginForm">
         <h1>Đăng nhập</h1>
         <input type="text" name="username" id="username" placeholder="Tên/SĐT/Email" autocomplete="off">
         <input type="password" name="pass" id="pass" placeholder="Mật khẩu" autocomplete="off">
@@ -22,30 +22,32 @@
 </body>
 
 <script>
-    document.getElementById("loginForm").addEventListener("submit", async (e) => {
-        e.preventDefault();
+document.getElementById("loginForm").addEventListener("submit", async (e) => {
+    e.preventDefault();
 
-        const username = document.getElementById("username").value;
-        const password = document.getElementById("pass").value;
+    const username = document.getElementById("username").value;
+    const pass = document.getElementById("pass").value;
 
-        try {
-            const res = await fetch("https://binary-account-clouds.onrender.com/login", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ username, password })
-            });
+    try {
+        const res = await fetch("https://binary-account-clouds.onrender.com/login", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({ username, pass })
+        });
 
-            const data = await res.json();
+        const data = await res.json();
 
-            if (data.token) {
-                localStorage.setItem("token", data.token);
-                window.location.href = "https://skljamesstudio.netlify.app/";
-            } else {
-                alert("Sai tài khoản hoặc mật khẩu 😭");
-            }
-        } catch (err) {
-            alert("Server không trả lời 💀");
-            console.error(err);
+        if (data.token) {
+            localStorage.setItem("token", data.token);
+            window.location.href = "https://skljamesstudio.netlify.app/";
+        } else {
+            alert(data.error || "Sai tài khoản hoặc mật khẩu");
         }
-    });
+    } catch (err) {
+        console.error(err);
+        alert("Lỗi kết nối server");
+    }
+});
 </script>
