--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <form class="box" id="loginForm">
         <h1>Đăng nhập</h1>
-        <input type="text" name="username" id="username" placeholder="Tên/SĐT/Email" autocomplete="off">
-        <input type="password" name="pass" id="pass" placeholder="Mật khẩu" autocomplete="off">
-        <input type="submit" id="submit" value="login">
+        <input type="text" id="username" placeholder="Tên/SĐT/Email" autocomplete="off">
+        <input type="password" id="pass" placeholder="Mật khẩu" autocomplete="off">
+        <input type="submit" value="Login">
     </form>
 </body>
 
